--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <meta name="description" content="Web site created using create-react-app" />
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Calistoga&family=Chicle&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Calistoga&family=Chicle&family=Rufina:wght@400;700&display=swap"
+    rel="stylesheet">
 
 
 
