--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,8 @@
 
   <meta name="description" content="Web site created using create-react-app" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Calistoga&family=Chicle&family=Rufina:wght@400;700&display=swap"
-    rel="stylesheet">
-
-
+    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Calistoga&family=Chicle&family=Rufina:wght@400;700&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <title>React App</title>
 </head>
